<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/camera"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@color/sky_blue"/>

	<RadioGroup
		android:id="@+id/radioGroupCamera"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<RadioButton
			android:id="@+id/cameraBackside"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:text="@string/backside"
			android:layout_width="wrap_content"/>

		<RadioButton
			android:id="@+id/cameraFrontal"
			android:text="@string/frontal"/>

		
	</RadioGroup>

	<CheckBox
			android:id="@+id/glasses"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/glasses"/>

	
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:text="@string/scale"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@color/sky_blue"/>

	<SeekBar
		android:id="@+id/seekBarScale"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/ten"
		android:text="@string/auto_sliding"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@color/sky_blue"/>

	<SeekBar
		android:id="@+id/seekBarSliding"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<CheckBox
			android:id="@+id/checkBoxFlash"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="@dimen/activity_vertical_margin"
			android:text="@string/flash"/>

		<CheckBox
			android:id="@+id/checkBoxShadow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/show_shadow"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<CheckBox
			android:id="@+id/checkBoxIconPhoto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/icon_photo"/>

		<Spinner
			android:id="@+id/spinnerResolution"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingRight="@dimen/activity_vertical_margin"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/buttonAbout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/about"/>

		<Button
			android:id="@+id/buttonClose"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/close"/>

	</LinearLayout>

</LinearLayout>

