<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/ten"
        android:text="@string/about_1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/sky_blue" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/ten"
        android:text="@string/about_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/sky_blue" />

    <TextView
        android:id="@+id/textViewEMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/about_3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/sky_blue" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />

</LinearLayout>